# skeletal_animation

./: .gitmodules  CMakeLists.txt  README.md  astro_boy.hpp  geometry.hpp  gl_common.hpp  simple_skeletal_animation.cpp  skeletal_animation.hpp
generator/: astro_boy_geometry_from_collada.hpp  geometry_generator.cpp
